separated data query into films service

--- a/quickstart/index.html
+++ b/quickstart/index.html
@@ -23,6 +23,7 @@
   <script src="/dist/router.es5.js"></script>
 
   <script src="./app.mdl.js"></script>
+  <script src="./common/services/films.svc.js"></script>
   <script src="./components/home/home.ctrl.js"></script>
   <script src="./components/films/films.ctrl.js"></script>
   <script src="./components/navigation/navigation.ctrl.js"></script>
