--- a/quickstart/index.html
+++ b/quickstart/index.html
@@ -15,6 +15,7 @@
       <md-content ng-viewport="main" flex class="md-padding" role="main" />
     </section>
   </div>
+  <script src="/bower_components/underscore/underscore-min.js"></script>
   <script src="/bower_components/angular/angular.min.js"></script>
   <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="/bower_components/angular-aria/angular-aria.min.js"></script>
